# pymars

./: .gitignore  Additional_notes.md  Complete_installation_guide.txt  Installation_guide.md  README.md  installation_guide.txt  note_numpy_random.txt  note_on_cpu_pal.txt  note_on_seeding.txt  pyproject.toml
examples/: config.yaml  config_new.yaml  energy_output_example.py  fragmentation_example_config.yaml  input.yaml
examples/aspirin/: config.yaml  config_fragmentation.yaml
examples/phoboos_opt/: input.yaml
examples/phoboos_spt/: input.yaml
examples/pymars/: energy_output_example.py
src/pymars/: __init__.py  atomic_units.py  data_model.py  gfn_references.py  initial_configuration.py  md.py  repulsion.py  rotation_utils.py  topology.py  topology_old.py  utils.py
src/pymars/phoboos/: __init__.py  optiminimize.py  singlepoint.py  utils.py
tests/: Methilammonium.xyz  Urea-H.xyz  conftest.py  mock_model.fnx  test_batch_sim_export.py  test_config_formats.py  test_config_parsing.py  test_fragmentation.py  test_initial_configuration.py  test_model_config.py  test_rotation_utils.py  test_variance_tracking.py
