[project]
name = "pymars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thomas Plé", email = "thomas.ple@sorbonne-universite.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "dxtb[libcint]>=0.3.0",
    "fennol[cuda]>=2025.9.30",
    "torch<2.8",
]

[project.scripts]
pymars = "pymars:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
